<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/action_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_tracklist"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/add_songs"
        app:showAsAction="always" />

</menu>


