<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit" />
    <item
        android:id="@+id/action_remove"
        android:orderInCategory="101"
        android:title="@string/action_remove" />
    <item
        android:id="@+id/action_play_next"
        android:orderInCategory="102"
        android:title="@string/action_play_next" />
    <item
        android:id="@+id/action_add_queue"
        android:orderInCategory="103"
        android:title="@string/action_add_queue" />

</menu>