...
                android:layout_margin="2dp"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_playlist_add_check_green_24dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip">

            <ImageView
                android:id="@+id/list_image"
...
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_playlist_add_black_24dp" />

                <FrameLayout
                    android:id="@+id/tracklist_row_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/tracklist_row_favorite_fill"
                        android:layout_width="wrap_content"
...
