<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_playlists"
        android:icon="@drawable/ic_library_music_black_24dp"
        android:title="@string/title_playlists" />

    <item
        android:id="@+id/navigation_playing"
        android:icon="@drawable/ic_play_arrow_black_24dp"
        android:title="@string/title_playing" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_special_library_music_black_24dp"
        android:title="@string/title_library" />

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_music_note_black_24dp"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_analytics"
        android:icon="@drawable/ic_show_chart_black_24dp"
        android:title="@string/title_analytics" />

</menu>
